--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
 
     <div id="lead">
         <div id="lead-content">
-            <h1>Ryan Fitzgerald</h1>
-            <h2>Software Engineer</h2>
+            <h1>Bruce West</h1>
+            <h2>Web Developer</h2>
             <a href="#" class="btn-rounded-white">Download Resume</a>
         </div>
         <!-- End #lead-content -->
@@ -73,9 +73,7 @@
                 </div>
                 <div class="col-md-8">
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat. Donec
-                        eu vehicula neque. Donec viverra lorem nunc, tempus euismod eros sollicitudin ut. Quisque et tincidunt libero. Donec id pharetra justo. Proin euismod lacinia dolor, eu scelerisque justo tempus pharetra. Vivamus nunc justo, finibus
-                        ut nisl sed, euismod rhoncus nulla. Proin sed magna egestas, egestas ante et, congue eros. In consequat, mauris dapibus tincidunt suscipit, ex libero aliquet diam, at maximus risus enim non leo.
+                        My name is Bruce! But it's not really. If you download my resume, you'll see my real name is Brandan – but call me Bruce. Now that we have that out of the way: I'm a veteran Army combat medic turned turned corporate manager, turned Computer Information Systems major, currently in school. In my free time I manage IT and web development for a few veterans organizations that I love. I started with Wordpress, which is what brought me out of my corporate career to study the craft of software. Now I'm venturing into the worlds of Node.JS, Java and C#. I'm in the infancy of becoming a full-stack engineer. Currently I'm a front-end engineer with full-stack tendancies.
                     </p>
                 </div>
             </div>
@@ -86,27 +84,41 @@
     <div id="experience" class="background-alt">
         <h2 class="heading">Experience</h2>
         <div id="experience-timeline">
-            <div data-date="September 2015 – September 2016">
-                <h3>Employer Name</h3>
-                <h4>Job Title</h4>
+            <div data-date="July 2016 – Present">
+                <h3>CrE8 Ninja</h3>
+                <h4>Web Developer</h4>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                    CrE8 Ninja is a name I currently operate under while donating my time as a web developer for veterans organizations.
+                </p>
+            </div>
+            <div data-date="July 2014 – March 2016">
+                <h3>Holiday Retirement</h3>
+                <h4>Community Manager / Sales Leader</h4>
+                <p>
+                    At Holiday I specialized in Independant Living Retirement communty management - which is basically a combination of property management, sales, and social engineering. I especially excelled at sales, so I transferred to a Community Sales Leader role, and upon resigning from the industry to pursue my venture into IT my community occupancy rate was at 100%, a huge accomplishment in that industry.
                 </p>
             </div>
 
-            <div data-date="September 2015 – September 2016">
-                <h3>Employer Name</h3>
-                <h4>Job Title</h4>
+            <div data-date="August 2012 – July 2014">
+                <h3>Life Half Priced</h3>
+                <h4>Chief Meal Giver</h4>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                    Life Half Priced was a venture co-founded by my wife and I. We sold restaurant coupon punch cards through ecommerce, each card saving 50% at area restaurants – for every card sold we donated a week's worth of meals to a child in need through a partner feeding program.
                 </p>
             </div>
 
-            <div data-date="September 2015 – September 2016">
-                <h3>Employer Name</h3>
-                <h4>Job Title</h4>
+            <div data-date="December 2010 – August 2012">
+                <h3>Local Ozarks News</h3>
+                <h4>Co-Founder</h4>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                    Local Ozarks News functioned as an online news agency in the Southwest Missouri area from 2010 through 2012. Members of Associate Press.
+                </p>
+            </div>
+            <div data-date="February 2006 – February 2014">
+                <h3>US Army</h3>
+                <h4>Healthcare Specialist</h4>
+                <p>
+                    I fulfilled an eight year contract to the US Army reserves, but spent nearly three years on active duty. I was deployed at Ramadi, Iraq during the Surge in 2007-2008 where I was a combat medic in a small outpost performing Police Transition Training and Intelligence.
                 </p>
             </div>
         </div>
@@ -116,30 +128,12 @@
     <div id="education">
         <h2 class="heading">Education</h2>
         <div class="education-block">
-            <h3>University of Ottawa</h3>
-            <span class="education-date">Sept 2016 - Sept 2017</span>
-            <h4>Bachelor of Science in Computer Science</h4>
+            <h3>Keiser University</h3>
+            <span class="education-date">Jan 2018 - Present</span>
+            <h4>Computer Information Systems</h4>
             <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                I'm presently and excitedly pursuing a new degree as a grown adult! I've returned to school to venture into technology.
             </p>
-        </div>
-        <!-- End .education-block -->
-
-        <div class="education-block">
-            <h3>University of Ottawa</h3>
-            <span class="education-date">Sept 2016 - Sept 2017</span>
-            <h4>Bachelor of Science in Computer Science</h4>
-            <ul>
-                <li>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                </li>
-                <li>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                </li>
-                <li>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                </li>
-            </ul>
         </div>
         <!-- End .education-block -->
     </div>
@@ -189,31 +183,17 @@
         <h2 class="heading">Skills</h2>
         <ul>
             <li>JavaScript</li>
-            <li>Python</li>
-            <li>Ruby</li>
-            <li>Go</li>
             <li>Node.js</li>
             <li>AngularJs</li>
             <li>React</li>
             <li>Elixir</li>
             <li>Java</li>
-            <li>C</li>
             <li>C#</li>
-            <li>C++</li>
-            <li>Ruby on Rails</li>
-            <li>JavaScript</li>
-            <li>Python</li>
-            <li>Ruby</li>
-            <li>Go</li>
-            <li>Node.js</li>
-            <li>AngularJs</li>
-            <li>React</li>
-            <li>Elixir</li>
-            <li>Java</li>
-            <li>C</li>
-            <li>C#</li>
-            <li>C++</li>
-            <li>Ruby on Rails</li>
+            <li>CSS</li>
+            <li>HTML</li>
+            <li>Bootstrap</li>
+            <li>Wordpress</li>
+            <li>MySQL</li>
         </ul>
     </div>
     <!-- End #skills -->
@@ -237,7 +217,7 @@
             <div class="row">
                 <div class="col-sm-5 copyright">
                     <p>
-                        Copyright &copy; 2017 YOUR NAME
+                        Copyright &copy; 2017 Bruce West
                     </p>
                 </div>
                 <div class="col-sm-2 top">
@@ -248,19 +228,10 @@
                 <div class="col-sm-5 social">
                     <ul>
                         <li>
-                            <a href="https://github.com/" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
+                            <a href="https://github.com/BruceAWest" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
                         </li>
                         <li>
-                            <a href="https://stackoverflow.com/" target="_blank"><i class="fa fa-stack-overflow" aria-hidden="true"></i></a>
-                        </li>
-                        <li>
-                            <a href="https://www.facebook.com/" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a>
-                        </li>
-                        <li>
-                            <a href="https://twitter.com/" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a>
-                        </li>
-                        <li>
-                            <a href="https://plus.google.com/" target="_blank"><i class="fa fa-google-plus" aria-hidden="true"></i></a>
+                            <a href="https://www.linkedin.com/in/bruceawest/" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
                         </li>
                     </ul>
                 </div>
