install gulp watch

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 </div>
                 <div class="col-md-8">
                     <p>
-                        My name is Bruce! But it's not really. If you download my resume, you'll see my real name is Brandan – but call me Bruce. Now that we have that out of the way: I'm a veteran Army combat medic turned turned corporate manager, turned Computer Information Systems major, currently in school. In my free time I manage IT and web development for a few veterans organizations that I love. I started with Wordpress, which is what brought me out of my corporate career to study the craft of software. Now I'm venturing into the worlds of Node.JS, Java and C#. I'm in the infancy of becoming a full-stack engineer. Currently I'm a front-end engineer with full-stack tendancies.
+                        My name is Bruce! But it's not really. If you download my resume, you'll see my real name is Brandan – but call me Bruce. Now that we have that out of the way: I'm a veteran Army combat medic turned corporate manager, turned Computer Information Systems major who is currently in school. In my free time I manage IT and web development for a few veterans organizations that I love. I started with Wordpress, which is what brought me out of my corporate career to study the craft of developing software. Currently I'm venturing into the worlds of Node.JS, Java and C#. I'm also in the infancy of honing my full-stack engineering skills. Presently I'm a front-end engineer with full-stack tendancies.
                     </p>
                 </div>
             </div>
@@ -118,7 +118,7 @@
                 <h3>US Army</h3>
                 <h4>Healthcare Specialist</h4>
                 <p>
-                    I fulfilled an eight year contract to the US Army reserves, but spent nearly three years on active duty. I was deployed at Ramadi, Iraq during the Surge in 2007-2008 where I was a combat medic in a small outpost performing Police Transition Training and Intelligence.
+                    I served an eight year contract to the US Army reserves, but spent nearly three years on active duty. I was deployed at Ramadi, Iraq during the Surge in 2007-2008 where I was a combat medic in a small outpost performing Police Transition Training and Intelligence.
                 </p>
             </div>
         </div>
@@ -149,7 +149,7 @@
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
-                        <h3>Project Name Here</h3>
+                        <h3>Vets2Success</h3>
                         <p>
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
                         </p>
@@ -165,7 +165,22 @@
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
-                        <h3>Project Name Here</h3>
+                        <h3>Veterans Filmmaking Academy</h3>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                        </p>
+                        <a href="#">View Project</a>
+                    </div>
+                    <!-- End .project-info -->
+                </div>
+                <!-- End .project -->
+                <div class="project shadow-large">
+                    <div class="project-image">
+                        <img src="images/project.jpg" />
+                    </div>
+                    <!-- End .project-image -->
+                    <div class="project-info">
+                        <h3>SRQ Vets</h3>
                         <p>
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
                         </p>
@@ -183,6 +198,7 @@
         <h2 class="heading">Skills</h2>
         <ul>
             <li>JavaScript</li>
+            <li>jQuery</li>
             <li>Node.js</li>
             <li>AngularJs</li>
             <li>React</li>
