--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div id="lead-content">
             <h1>Bruce West</h1>
             <h2>Web Developer</h2>
-            <a href="#" class="btn-rounded-white">Download Resume</a>
+            <a href="https://www.linkedin.com/in/bruceawest/" target="_blank" class="btn-rounded-white">View LinkedIn</a>
         </div>
         <!-- End #lead-content -->
 
@@ -73,7 +73,7 @@
                 </div>
                 <div class="col-md-8">
                     <p>
-                        My name is Bruce! But it's not really. If you download my resume, you'll see my real name is Brandan – but call me Bruce. Now that we have that out of the way: I'm a veteran Army combat medic turned corporate manager, turned Computer Information Systems major who is currently in school. In my free time I manage IT and web development for a few veterans organizations that I love. I started with Wordpress, which is what brought me out of my corporate career to study the craft of developing software. Currently I'm venturing into the worlds of Node.JS, Java and C#. I'm also in the infancy of honing my full-stack engineering skills. Presently I'm a front-end engineer with full-stack tendancies.
+                        My name is Bruce! But it's not really. My real name is Brandan – but call me Bruce. Now that we have that out of the way: I'm a veteran Army combat medic turned corporate manager, turned Computer Information Systems major who is currently in school. In my free time I manage IT and web development for a few veterans organizations that I love. I started with Wordpress, which is what brought me out of my corporate career to study the craft of developing software. Currently I'm venturing into the worlds of Node.JS, Java and C#. I'm also in the infancy of honing my full-stack engineering skills. Presently I'm a front-end engineer with full-stack tendancies.
                     </p>
                 </div>
             </div>
