--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
                 <div class="col-sm-5 social">
                     <ul>
                         <li>
-                            <a href="https://github.com/BruceAWest" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
+                            <a href="https://github.com/BruceBAWest" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
                         </li>
                         <li>
                             <a href="https://www.linkedin.com/in/bruceawest/" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
