--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
     <div id="lead">
         <div id="lead-content">
-            <h1>Bruce West</h1>
+            <h1>Bruce B. A. West</h1>
             <h2>Web Developer</h2>
             <a href="https://www.linkedin.com/in/bruceawest/" target="_blank" class="btn-rounded-white">View LinkedIn</a>
         </div>
