--- a/index.html
+++ b/index.html
@@ -118,7 +118,8 @@
                 <h3>US Army</h3>
                 <h4>Healthcare Specialist</h4>
                 <p>
-                    I served an eight year contract to the US Army reserves, but spent nearly three years on active duty. I was deployed at Ramadi, Iraq during the Surge in 2007-2008 where I was a combat medic in a small outpost performing Police Transition Training and Intelligence.
+                    I served an eight year contract to the US Army reserves, but spent nearly three years on active duty. I was deployed to Ramadi, Iraq during the Surge in 2007-2008 where I was a combat medic in a small outpost performing Police Transition Training and performing support for Intelligence.
+			.
                 </p>
             </div>
         </div>
@@ -201,13 +202,17 @@
             <li>jQuery</li>
             <li>Node.js</li>
             <li>AngularJs</li>
-            <li>React</li>
+            <li>React JS</li>
+	    <li>MondoDb</li>
             <li>Java</li>
             <li>C#</li>
+	    <li>Bootstrap</li>
             <li>CSS</li>
             <li>HTML</li>
             <li>Bootstrap</li>
             <li>Wordpress</li>
+	    <li>PHP</li>
+	    <li>MySQL</li>
             <li>Buddypress</li>
             <li>MySQL</li>
         </ul>
