--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
             <span class="education-date">Jan 2018 - Present</span>
             <h4>Computer Information Systems</h4>
             <p>
-                I'm presently and excitedly pursuing a new degree as a grown adult! I've returned to school to venture into technology.
+                I'm presently and excitedly pursuing a new degree! I've returned to school to further my career in technology
             </p>
         </div>
         <!-- End .education-block -->
