--- a/index.html
+++ b/index.html
@@ -85,41 +85,33 @@
         <h2 class="heading">Experience</h2>
         <div id="experience-timeline">
             <div data-date="July 2016 – Present">
-                <h3>CrE8 Ninja</h3>
-                <h4>Web Developer</h4>
+                <h3>Xendev</h3>
+                <h4>Consultant</h4>
                 <p>
-                    CrE8 Ninja is a name I currently operate under while donating my time as a web developer for veterans organizations.
+                    Information systems consultant for small businesses and non-profit organizations, including websites, cloud computing and data systems.
                 </p>
             </div>
-            <div data-date="July 2014 – March 2016">
+            <div data-date="June 2014 – June 2016">
                 <h3>Holiday Retirement</h3>
-                <h4>Community Manager / Sales Leader</h4>
+                <h4>Retirement Community Director</h4>
                 <p>
-                    At Holiday I specialized in Independant Living Retirement communty management - which is basically a combination of property management, sales, and social engineering. I especially excelled at sales, so I transferred to a Community Sales Leader role, and upon resigning from the industry to pursue my venture into IT my community occupancy rate was at 100%, a huge accomplishment in that industry.
+                     Independent Living retirement community management, including leadership of staff, operations, sales, marketing, and property management. Maintained above industry-standard occupancy.
                 </p>
             </div>
 
-            <div data-date="August 2012 – July 2014">
-                <h3>Life Half Priced</h3>
-                <h4>Chief Meal Giver</h4>
+            <div data-date="June 2012 – June 2014">
+                <h3>Local Ozarks</h3>
+                <h4>Operations Director</h4>
                 <p>
-                    Life Half Priced was a venture co-founded by my wife and I. We sold restaurant coupon punch cards through ecommerce, each card saving 50% at area restaurants – for every card sold we donated a week's worth of meals to a child in need through a partner feeding program.
+                    Co-Founder and operations director of regional new media tech startup. Secured two rounds of investing. Staff of 30 writers and developers. Members of Associated Press. Ceased operations in 2014.
                 </p>
             </div>
-
-            <div data-date="December 2010 – August 2012">
-                <h3>Local Ozarks News</h3>
-                <h4>Co-Founder</h4>
-                <p>
-                    Local Ozarks News functioned as an online news agency in the Southwest Missouri area from 2010 through 2012. Members of Associate Press.
-                </p>
-            </div>
-            <div data-date="February 2006 – February 2014">
+		
+            <div data-date="February 2006 – February 2012">
                 <h3>US Army</h3>
                 <h4>Healthcare Specialist</h4>
                 <p>
-                    I served an eight year contract to the US Army reserves, but spent nearly three years on active duty. I was deployed to Ramadi, Iraq during the Surge in 2007-2008 where I was a combat medic in a small outpost performing Police Transition Training and performing support for Intelligence.
-			.
+                    Served in Ramadi, Iraq during OIF campaign V, the Iraqi Surge, as a combat medic in the 603rd Military Police Company, attached to a joint task force under II Marine Expeditionary Force and the Army 3rd ID.
                 </p>
             </div>
         </div>
