--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
             <span class="education-date">Jan 2018 - Present</span>
             <h4>Computer Information Systems</h4>
             <p>
-                I'm presently and excitedly pursuing a new degree! I've returned to school to further my career in technology
+                Studying information systems, including data science and analytics, and informatics. Presently conducting bioinformatics research.
             </p>
         </div>
         <!-- End .education-block -->
@@ -197,7 +197,11 @@
             <li>React JS</li>
 	    <li>MondoDb</li>
             <li>Java</li>
-            <li>C#</li>
+            <li>R</li>
+	    <li>Python</li>
+	    <li>Data Analysis</li>
+	    <li>Android</li>
+	    <li>App Development</li>
 	    <li>Bootstrap</li>
             <li>CSS</li>
             <li>HTML</li>
@@ -205,7 +209,10 @@
             <li>Wordpress</li>
 	    <li>PHP</li>
 	    <li>MySQL</li>
-            <li>Buddypress</li>
+	    <li>SQLite</li>
+	    <li>NoSQL</li>
+	    <li>AWS</li>
+            <li>Cloud Computing</li>
         </ul>
     </div>
     <!-- End #skills -->
