Update about Section

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <div id="lead">
         <div id="lead-content">
             <h1>Bruce B. A. West</h1>
-            <h2>Web Developer</h2>
+            <h2>Consultant</h2>
             <a href="https://www.linkedin.com/in/bruceawest/" target="_blank" class="btn-rounded-white">View LinkedIn</a>
         </div>
         <!-- End #lead-content -->
@@ -73,8 +73,10 @@
                 </div>
                 <div class="col-md-8">
                     <p>
-                        My name is Bruce! But it's not really. My real name is Brandan – but call me Bruce. Now that we have that out of the way: I'm a veteran Army combat medic turned corporate manager, turned Computer Information Systems major who is currently in school. In my free time I manage IT and web development for a few veterans organizations that I love. I started with Wordpress, which is what brought me out of my corporate career to study the craft of developing software. Currently I'm venturing into the worlds of Node.JS, Java and C#. I'm also in the infancy of honing my full-stack engineering skills. Presently I'm a front-end engineer with full-stack tendancies.
-                    </p>
+                         I help startups, non-profits & small to medium sized companies with their computing solutions, data & information systems.
+                         <br> PS: My real name is Brandan, but please call me Bruce.
+			 <br>How may I help you?
+		    </p>
                 </div>
             </div>
         </div>
