--- a/index.html
+++ b/index.html
@@ -73,7 +73,8 @@
                 </div>
                 <div class="col-md-8">
                     <p>
-                         I help startups, non-profits & small to medium sized companies with their computing solutions, data & information systems.
+                         Computer consultant specializing in business information systems, data analysis and bioinformatics. Experienced business operations manager.
+			 <br>I help startups, non-profits & small to medium sized companies with their computing solutions, data & information systems.
                          <br> PS: My real name is Brandan, but please call me Bruce.
 			 <br>How may I help you?
 		    </p>
