--- a/index.html
+++ b/index.html
@@ -125,10 +125,9 @@
         <h2 class="heading">Education</h2>
         <div class="education-block">
             <h3>Keiser University</h3>
-            <span class="education-date">Jan 2018 - Present</span>
             <h4>Computer Information Systems</h4>
             <p>
-                Studying information systems, including data science and analytics, and informatics. Presently conducting bioinformatics research.
+                Information systems, including data science, analytics and informatics. Presently conducting bioinformatics research.
             </p>
         </div>
         <!-- End .education-block -->
