--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <div id="lead">
         <div id="lead-content">
             <h1>Bruce B. A. West</h1>
-            <h2>Consultant</h2>
+            <h2>Software Developer</h2>
             <a href="https://www.linkedin.com/in/bruceawest/" target="_blank" class="btn-rounded-white">View LinkedIn</a>
         </div>
         <!-- End #lead-content -->
