update bio and about info

--- a/index.html
+++ b/index.html
@@ -85,10 +85,10 @@
         <h2 class="heading">Experience</h2>
         <div id="experience-timeline">
             <div data-date="July 2016 – Present">
-                <h3>CrE8 Ninja</h3>
+                <h3>Xendev</h3>
                 <h4>Web Developer</h4>
                 <p>
-                    CrE8 Ninja is a name I currently operate under while donating my time as a web developer for veterans organizations.
+                    Xendev is a name I currently operate under while donating my time as a web developer and information systems consultant for veterans organizations.
                 </p>
             </div>
             <div data-date="July 2014 – March 2016">
@@ -111,14 +111,14 @@
                 <h3>Local Ozarks News</h3>
                 <h4>Co-Founder</h4>
                 <p>
-                    Local Ozarks News functioned as an online news agency in the Southwest Missouri area from 2010 through 2012. Members of Associate Press.
+                    Local Ozarks News functioned as an online news agency in the Southwest Missouri area from 2010 through 2012. Members of Associate Press. As a service to our B2B advertising customers we offered web development, IS consulting, branding and graphic design, and digital marketing under the name Local Ozarks Development.
                 </p>
             </div>
             <div data-date="February 2006 – February 2014">
                 <h3>US Army</h3>
-                <h4>Healthcare Specialist</h4>
+                <h4>Combat Medic</h4>
                 <p>
-                    I served an eight year contract to the US Army reserves, but spent nearly three years on active duty. I was deployed to Ramadi, Iraq during the Surge in 2007-2008 where I was a combat medic in a small outpost performing Police Transition Training and performing support for Intelligence.
+                    I served an eight year contract to the US Army reserves, but spent nearly three years on active duty. I was deployed to Ramadi, Iraq during the Surge in 2007-2008 as a combat medic in a small outpost performing Police Transition Training and support for an intelligence unit in our OP.
 			.
                 </p>
             </div>
@@ -133,7 +133,7 @@
             <span class="education-date">Jan 2018 - Present</span>
             <h4>Computer Information Systems</h4>
             <p>
-                I'm presently and excitedly pursuing a new degree! I've returned to school to further my career in technology
+                4.0 Student. I'm presently and excitedly pursuing a new degree! I've returned to school to further my career in technology
             </p>
         </div>
         <!-- End .education-block -->
@@ -203,17 +203,20 @@
             <li>Node.js</li>
             <li>AngularJs</li>
             <li>React JS</li>
-	    <li>MondoDb</li>
+	          <li>MondoDb</li>
             <li>Java</li>
-            <li>C#</li>
-	    <li>Bootstrap</li>
+            <li>Android</li>
+	          <li>Bootstrap</li>
             <li>CSS</li>
             <li>HTML</li>
             <li>Bootstrap</li>
             <li>Wordpress</li>
-	    <li>PHP</li>
-	    <li>MySQL</li>
-            <li>Buddypress</li>
+            <li>PHP</li>
+            <li>SQL</li>
+            <li>AWS</li>
+            <li>CLoud Computing</li>
+            <li>Databasing</li>
+            <li>Data Analysis</li>
         </ul>
     </div>
     <!-- End #skills -->
