--- a/index.html
+++ b/index.html
@@ -130,7 +130,8 @@
             <h3>Keiser University</h3>
             <h4>Computer Information Systems</h4>
             <p>
-                4.0 Student. I'm presently and excitedly pursuing a new degree! I've returned to school to further my career in technology
+                4.0 Student.
+                <br>I'm presently and excitedly pursuing a new degree! I've returned to school to further my career in technology
             </p>
         </div>
         <!-- End .education-block -->
