--- a/index.html
+++ b/index.html
@@ -129,9 +129,9 @@
         <div class="education-block">
             <h3>Keiser University</h3>
             <h4>Computer Information Systems</h4>
-            <h5>4.0 Student</h5>
             <p>
-                I'm presently and excitedly pursuing a new degree! I've returned to school to further my career in technology
+                I'm presently and excitedly pursuing a new degree! I've returned to school to further my career in technology.
+                <br>4.0 Student
             </p>
         </div>
         <!-- End .education-block -->
