edit some grammar stupidity

--- a/index.html
+++ b/index.html
@@ -73,12 +73,11 @@
                 </div>
                 <div class="col-md-8">
                     <p>
-                         Full stack software developer with working knowledge of Java, Javascript, Python and R, cloud computing and architecture,
-			 <br>databasing and data anylsis.
-			 <br>Experienced business leader.
-			 <br>As a consultant, I help startups, non-profits & small to medium sized companies with their computing solutions, data & information systems.
+                         Full stack software developer with working knowledge of Java, Javascript, Python and R, cloud computing and architecture, databasing and data analysis.
+			                   <br>Experienced business leader.
+			                   <br>As a consultant, I help startups, non-profits & small to medium sized companies with their computing solutions, data & information systems.
                          <br> PS: My real name is Brandan, but please call me Bruce.
-			 <br>How may I help you?
+			                   <br>How may I help you?
 		    </p>
                 </div>
             </div>
