--- a/index.html
+++ b/index.html
@@ -73,9 +73,9 @@
                 </div>
                 <div class="col-md-8">
                     <p>
-                         Full stack software developer with working knowledge of Java, Javascript, Python and R, cloud computing and architecture, databasing and data analysis.
+                         Software development engineer specializing in app development and cloud computing
 			                   <br>Experienced business leader.
-			                   <br>As a consultant, I help startups, non-profits & small to medium sized companies with their computing solutions, data & information systems.
+			                   <br>As a pro-bono consultant, I help small veterans non-profit organizations with their web solutions, data & information systems.
                          <br>PS: My real name is Brandan, but please call me Bruce.
 			                   <br>How may I help you?
 		    </p>
@@ -92,12 +92,12 @@
                 <h3>Xendev</h3>
                 <h4>Web Developer</h4>
                 <p>
-                    Xendev is a name I currently operate under while donating my time as a web developer and information systems consultant for veterans organizations.
+                    Xendev is a name I currently operate under while donating my time as a developer and consultant for veterans organizations.
                 </p>
             </div>
             <div data-date="June 2014 – June 2016">
                 <h3>Holiday Retirement</h3>
-                <h4>Retirement Community Director</h4>
+                <h4>Retirement Community Manager</h4>
                 <p>
                      Independent Living retirement community management, including leadership of staff, operations, sales, marketing, and property management. Maintained above industry-standard occupancy.
                 </p>
@@ -107,7 +107,7 @@
                 <h3>Local Ozarks</h3>
                 <h4>Operations Director</h4>
                 <p>
-                    Local Ozarks News functioned as an online news agency in the Southwest Missouri area from 2010 through 2012. Members of Associate Press. As a service to our B2B advertising customers we offered web development, IS consulting, branding and graphic design, and digital marketing under the name Local Ozarks Development.
+                    Local Ozarks News functioned as an online news agency in the Southwest Missouri area from 2010 through 2012. Members of Associate Press. As a service to our B2B advertising customers we offered web development, IS consulting, branding and graphic design, and digital marketing under the name Local Ozarks Development until 2014.
                 </p>
             </div>
 
@@ -115,7 +115,7 @@
                 <h3>US Army</h3>
                 <h4>Combat Medic</h4>
                 <p>
-                    I served an eight year contract to the US Army reserves, but spent nearly three years on active duty. I was deployed to Ramadi, Iraq during the Surge in 2007-2008 as a combat medic in a small outpost performing Police Transition Training and support for an intelligence unit in our OP.
+                    I served an eight year contract to the US Army reserves, but spent nearly three years on active duty. I was deployed to Ramadi, Iraq during the Surge in 2007-2008 as a combat medic in a small outpost performing Police Transition Training and support for a small intelligence unit in our outpost.
 			.
                 </p>
             </div>
@@ -129,7 +129,7 @@
             <h3>Keiser University</h3>
             <h4>Computer Information Systems</h4>
             <p>
-                I'm presently and excitedly pursuing a new degree! I've returned to school to further my career in technology.
+                Studies include: data science and analytics;  Python, Java and Android development; SQL; and AWS Cloud Computing
                 <br>
                 <br>4.0 Student
             </p>
