--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                         <p>
                           SRQ Vets is a locally based 501(c)(3) non-profit founded and led by volunteer veterans serving veterans in the SRQ area. We offer a broad range of assistance to local vets in need, including helping in the Veterans Court, the Veterans Filmmaking Academy, Operation Rubix, aiding veterans in need of transportation, home modifications for disabled vets, and much more. Our scope is broad, but focuses entirely on local vets, helping make a local impact. We work on a 100% volunteer basis where we take resources donated or raised locally and reinvest in our local veteran community to directly help vets in need, or donate to partner local veteran organizations that will specifically use those resources to help our local veterans. We have worked hard to become a network of doers and not talkers.
                         </p>
-                        <a href="http://srqvets.org/" target="_blank">View Project</a>
+                        <a href="http://srqvets.us/" target="_blank">View Project</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
