--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                     <div class="project-info">
                         <h3>Vets2Success</h3>
                         <p>
-                          Vets2Success is a Non-profit program that creates programs for veterans to rehabilitate to their communities through food an brew programs. This organizations purpose is to inspire, mentor, educate, and change the lives of homeless and displaced veterans and impact the communities in which they live. This program was created after the loss of the founder's younger brother to veteran suicide, as well as the founder's personal battle with readjusting back into his local community. With food and brew as his guiding passion he shows veterans a path they to can share and have a new purpose in life through something they love.
+                          Vets2Success is a Non-profit program that creates programs for veterans to rehabilitate to their communities through food an brew programs. This organizations purpose is to inspire, mentor, educate, and change the lives of homeless and displaced veterans and impact the communities in which they live. This program was created after the loss of the founder's younger brother to veteran suicide, as well as the founder's personal battle with readjusting back into his local community. With food and brew as his guiding passion he shows veterans a path they to can share and have a new purpose in life through something they love. (I originially created this site, but passed the torch to other developers to focus more on school). 
                         </p>
                         <a href="http://vets2success.org/" target="_blank">View Project</a>
                     </div>
@@ -168,7 +168,7 @@
                         <p>
                           The VFA pairs veterans with seasoned filmmakers to educate them in the art and science of filmmaking. The purpose of this organization is to harness the unique attributes of military service members' experiences, including their team building skills, inherent attention to detail, and work ethic, an to unleash creative talents of the combination of both the veteran and civilian worlds. The VFA experience bridges the gap between veterans and film industry professionals and assists veterans in re-assimilating into civilian society.
                         </p>
-                        <a href="http://veteransfilmacademy.org/" target="_blank">View Project</a>
+                        <p>Organization Closed: site no longer exists</p>
                     </div>
                     <!-- End .project-info -->
                 </div>
@@ -181,7 +181,7 @@
                     <div class="project-info">
                         <h3>SRQ Vets</h3>
                         <p>
-                          SRQ Vets is a locally based 501(c)(3) non-profit founded and led by volunteer veterans serving veterans in the SRQ area. We offer a broad range of assistance to local vets in need, including helping in the Veterans Court, the Veterans Filmmaking Academy, Operation Rubix, aiding veterans in need of transportation, home modifications for disabled vets, and much more. Our scope is broad, but focuses entirely on local vets, helping make a local impact. We work on a 100% volunteer basis where we take resources donated or raised locally and reinvest in our local veteran community to directly help vets in need, or donate to partner local veteran organizations that will specifically use those resources to help our local veterans. We have worked hard to become a network of doers and not talkers.
+                          SRQ Vets is a locally based 501(c)(3) non-profit founded and led by volunteer veterans serving veterans in the SRQ area. We offer a broad range of assistance to local vets in need, including helping in the Veterans Court, the Veterans Filmmaking Academy, Operation Rubix, aiding veterans in need of transportation, home modifications for disabled vets, and much more. Our scope is broad, but focuses entirely on local vets, helping make a local impact. We work on a 100% volunteer basis where we take resources donated or raised locally and reinvest in our local veteran community to directly help vets in need, or donate to partner local veteran organizations that will specifically use those resources to help our local veterans. We have worked hard to become a network of doers and not talkers. (I originially created this site, but passed the torch to other developers to focus more on school).
                         </p>
                         <a href="http://srqvets.us/" target="_blank">View Project</a>
                     </div>
