--- a/index.html
+++ b/index.html
@@ -88,7 +88,14 @@
     <div id="experience" class="background-alt">
         <h2 class="heading">Experience</h2>
         <div id="experience-timeline">
-            <div data-date="July 2016 – Present">
+            <div data-date="July 2016 – March 2020">
+                <h3>Amazon Web Services</h3>
+                <h4>Software Development Engineer</h4>
+                <p>
+                    SDE on the AWS Documentation Team, helping to build the tools and services to generate and deliver developer documentation for Amazon Web Services.
+                </p>
+            </div>
+	    <div data-date="July 2016 – March 2020">
                 <h3>Xendev</h3>
                 <h4>Web Developer</h4>
                 <p>
