--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     <div id="experience" class="background-alt">
         <h2 class="heading">Experience</h2>
         <div id="experience-timeline">
-            <div data-date="July 2016 – March 2020">
+            <div data-date="April 2020 – Present">
                 <h3>Amazon Web Services</h3>
                 <h4>Software Development Engineer</h4>
                 <p>
