--- a/index.html
+++ b/index.html
@@ -73,8 +73,9 @@
                 </div>
                 <div class="col-md-8">
                     <p>
-                         Software development engineer specializing in app development and cloud computing
-			                   <br>Experienced business leader.
+                         Software development engineer specializing in app development and cloud computing.
+                               <br>Experienced team leader.
+                               <br>I’m an SDE on the AWS Documentation Team as a Military Apprentice. My role is to help build the tools and services to generate and deliver developer documentation for Amazon Web Services.
 			                   <br>As a pro-bono consultant, I help small veterans non-profit organizations with their web solutions, data & information systems.
                          <br>PS: My real name is Brandan, but please call me Bruce.
 			                   <br>How may I help you?
