--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
                 <div class="col-md-8">
                     <p>
                          Software development engineer specializing in app development and cloud computing.
-                               <br>Experienced team leader.
-                               <br>I’m an SDE on the AWS Documentation Team as a Military Apprentice. My role is to help build the tools and services to generate and deliver developer documentation for Amazon Web Services.
+                               <br>Experienced team leader and business manager. 
+                               <br>Software Development Engineer on the AWS Documentation Team. My role is to help build the tools and services to generate and deliver developer documentation for Amazon Web Services.
 			                   <br>As a pro-bono consultant, I help small veterans non-profit organizations with their web solutions, data & information systems.
                          <br>PS: My real name is Brandan, but please call me Bruce.
 			                   <br>How may I help you?
@@ -139,7 +139,7 @@
             <p>
                 Studies include: data science and analytics;  Python, Java and Android development; SQL; and AWS Cloud Computing
                 <br>
-                <br>4.0 Student
+                <br>Summa Cum Laude – 4.0 GPA
             </p>
         </div>
         <!-- End .education-block -->
@@ -204,24 +204,24 @@
     <div id="skills">
         <h2 class="heading">Skills</h2>
         <ul>
-            <li>JavaScript</li>
-            <li>Node.js</li>
-            <li>React JS</li>
             <li>Java</li>
-	    <li>Python</li>
-	    <li>Data Analysis</li>
-	    <li>Android</li>
-	    <li>App Development</li>
-	    <li>Bootstrap</li>
-            <li>CSS</li>
-            <li>HTML</li>
-            <li>Wordpress</li>
+            <li>JavaScript</li>
             <li>PHP</li>
             <li>SQL</li>
-            <li>AWS</li>
-            <li>CLoud Computing</li>
-            <li>Databasing</li>
+            <li>AWS</li>       
+	        <li>Python</li>
             <li>Data Analysis</li>
+            <li>Node.js</li>
+            <li>React JS</li>
+	        <li>Android</li>
+            <li>App Development</li>
+            <li>WordPress</li>
+            <li>Spring Framework</li>
+            <li>LAMP Stack</li>
+            <li>CLoud Computing</li>
+            <li>Serverless</li>
+            <li>Linux</li>
+            <li>Database languages</li>
         </ul>
     </div>
     <!-- End #skills -->
@@ -245,7 +245,7 @@
             <div class="row">
                 <div class="col-sm-5 copyright">
                     <p>
-                        Copyright &copy; 2019 Bruce West
+                        Copyright &copy; 2020 Bruce West
                     </p>
                 </div>
                 <div class="col-sm-2 top">
