--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                     <p>
                          Software development engineer specializing in app development and cloud computing.
                                <br>Experienced team leader and business manager. 
-                               <br>Software Development Engineer on the AWS Documentation Team. My role is to help build the tools and services to generate and deliver developer documentation for Amazon Web Services.
+                               <br>I'm an SDE and systems engineer on the AWS Documentation Team. My role is to help build the tools and services to generate and deliver developer documentation for Amazon Web Services.
 			                   <br>As a pro-bono consultant, I help small veterans non-profit organizations with their web solutions, data & information systems.
                          <br>PS: My real name is Brandan, but please call me Bruce.
 			                   <br>How may I help you?
