update army section

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                 <h3>US Army</h3>
                 <h4>Combat Medic</h4>
                 <p>
-                    I served an eight year contract to the US Army reserves, but spent nearly three years on active duty. I was deployed to Ramadi, Iraq during the Surge in 2007-2008 as a combat medic in a small outpost performing Police Transition Training and support for a small intelligence unit in our outpost.
+                    Served in Ramadi, Iraq during the Surge in 2007-2008 as a combat medic in a small outpost performing Police Transition Training and support for a small intelligence unit in our outpost.
 			.
                 </p>
             </div>
