update some verbage, etc

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                 <h3>US Army</h3>
                 <h4>Combat Medic</h4>
                 <p>
-                    Served in Ramadi, Iraq during the Surge in 2007-2008 as a combat medic for a Military Police unit, working in a small outpost in Ramadi performing Police Transition Training, as well as providing support for a small intelligence unit in our outpost.
+                    Served in Ramadi, Iraq during the Surge in 2007-2008 as a combat medic for a Military Police unit, working in a small outpost in Ramadi performing Police Transition Training, as well as providing support for an intelligence unit in our outpost.
 			.
                 </p>
             </div>
