update xendev section, removed a word

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                 <h3>Xendev</h3>
                 <h4>Web Developer</h4>
                 <p>
-                    Xendev is a name I currently operate under while donating my time as a developer and consultant for veterans organizations.
+                    Xendev is a name I operate under while donating my time as a developer and consultant for veterans organizations.
                 </p>
             </div>
             <div data-date="June 2014 – June 2016">
