update some details

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             </div>
 	    <div data-date="July 2016 – March 2020">
                 <h3>Xendev</h3>
-                <h4>Web Developer</h4>
+                <h4>Developer / Consultant</h4>
                 <p>
                     Xendev is a name I operate under while donating my time as a developer and consultant for veterans organizations.
                 </p>
@@ -113,7 +113,7 @@
 
             <div data-date="June 2012 – June 2014">
                 <h3>Local Ozarks</h3>
-                <h4>Operations Director</h4>
+                <h4>Operations Director / Developer</h4>
                 <p>
                     Local Ozarks News functioned as an online news agency in the Southwest Missouri area from 2010 through 2012. Members of Associate Press. As a service to our B2B advertising customers we offered web development, IS consulting, branding and graphic design, and digital marketing under the name Local Ozarks Development until 2014.
                 </p>
@@ -137,7 +137,7 @@
             <h3>Keiser University</h3>
             <h4>Computer Information Systems</h4>
             <p>
-                Studies include: data science and analytics;  Python, Java and Android development; SQL; and AWS Cloud Computing
+                Studies include: data science and analytics;  Python, Java, Android development, and AWS Cloud Computing.
                 <br>
                 <br>Summa Cum Laude – 4.0 GPA
             </p>
